--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -43,7 +43,7 @@
 				{{#each burgers}}
 					{{#if this.devoured}}
 						<li class="list-group-item" id="eaten-burger-li">
-								{{this.id}}. {{this.burger_name}} - {{this.temp}}
+								{{this.id}}. {{this.burger_name}} - {{!-- {{this.temp}} --}}
 						</li>
 					{{/if}}
 				{{/each}}
